Fixed name jumping up after animation occured issue and changed navigation colors and placement of nav links.

--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -7,8 +7,9 @@
 
 body {
     font-family: 'Proxima Nova', Georgia, sans-serif;
-    color: #FFF;
+    color: #fff;
     margin: 0;
+    background-color: #fff;
 }
 
 a {
@@ -23,6 +24,10 @@ a:hover{
 /* Temp style */
 header{
     /*text-align: right;*/
+}
+
+positionRelative{
+    position:relative;
 }
 
 /******************************************************************************/
@@ -61,9 +66,10 @@ header{
     left: 0;
     height: 100vh;
     width: 100vw;
-    background: #FFF;
+    background: #fff;
     z-index: 1;
     /*background: transparent;*/
+    /*display:none;*/
 }
 
 .object{
@@ -106,7 +112,7 @@ path {
     width: 225px;
     position:absolute;
     top:50vh;
-    left: 50vw;
+    left: 50%;
     margin-left: -108px;
     margin-top: -170px;
 }
@@ -158,10 +164,19 @@ path {
 /******************************************************************************/
 /* NAVIGATION */
 /******************************************************************************/
-.navbar-nav{
-    width: 100%;
+.navbar-toggleable-md .navbar-nav{
+    display: flex;
+    align-items:flex-end;
+    justify-content: center;
+    padding-left: 75%;
 }
-.navbar-toggleable-lg .navbar-nav .nav-link{
+
+.navbar-toggleable-md .navbar-nav .nav-link{
     width: 33%;
-    text-align: right;
+    color: #AAA;
 }
+
+.navbar-inverse .navbar-nav .active>.nav-link, .navbar-inverse .navbar-nav .nav-link.active, .navbar-inverse .navbar-nav .nav-link.open, .navbar-inverse .navbar-nav .open>.nav-link{
+    color: #CD9C43;
+}
+
